--- a/Encoder_decoder_inpainting.ipynb
+++ b/Encoder_decoder_inpainting.ipynb
@@ -1062,7 +1062,7 @@
         "                    (batch_size,), real_label, dtype=label.dtype, device=label.device\n",
         "                )\n",
         "\n",
-        "            output = netD(real_center)  # 1\n",
+        "            output = netD(real_center)  \n",
         "\n",
         "            label_save = label\n",
         "\n",
@@ -1072,13 +1072,13 @@
         "            D_x = output.data.mean()\n",
         "\n",
         "            # train the discriminator with fake data---\n",
-        "            fake = netG(input_cropped)  # 2\n",
+        "            fake = netG(input_cropped)  \n",
         "            label = label_save\n",
         "            label.data.fill_(fake_label)\n",
         "\n",
         "\n",
         "            # fake being fed in\n",
-        "            output = netD(fake.detach())  # 3\n",
+        "            output = netD(fake.detach())  \n",
         "            label = label.view(-1, 1, 1, 1).expand_as(output)\n",
         "            errD_fake = criterion(output, label)\n",
         "            errD_fake.backward()\n",
@@ -1089,7 +1089,7 @@
         "            # Training the generator\n",
         "            netG.zero_grad()\n",
         "            label.data.fill_(real_label)  # fake labels are real for generator cost\n",
-        "            output = netD(fake)  # 4\n",
+        "            output = netD(fake)  \n",
         "            errG_D = criterion(output, label)\n",
         "\n",
         "            wtl2Matrix = real_center.clone()\n",
