--- a/Encoder_decoder_inpainting.ipynb
+++ b/Encoder_decoder_inpainting.ipynb
@@ -1088,7 +1088,7 @@
         "\n",
         "            # Training the generator\n",
         "            netG.zero_grad()\n",
-        "            label.data.fill_(real_label)  # fake labels are real for generator cost\n",
+        "            label.data.fill_(real_label)  \n",
         "            output = netD(fake)  \n",
         "            errG_D = criterion(output, label)\n",
         "\n",
